c_fms/c_fms.F90


    if(present(x_is_global)) then
       if(present(y_is_global)) then
          call fms_mpp_domains_set_compute_domain(domain=current_domain, xbegin=xbegin, xend=xend,&
               tile_count=tile_count, ybegin=ybegin, yend=yend, xsize=xsize, ysize=ysize,         &
               x_is_global=logical(x_is_global), y_is_global=logical(y_is_global))
       else
          call fms_mpp_domains_set_compute_domain(domain=current_domain, xbegin=xbegin, xend=xend,&
               tile_count=tile_count, ybegin=ybegin, yend=yend, xsize=xsize, ysize=ysize,         &
               x_is_global=logical(x_is_global))
       end if
    else if(present(y_is_global)) then
       call fms_mpp_domains_set_compute_domain(domain=current_domain, xbegin=xbegin, xend=xend,&
            tile_count=tile_count, ybegin=ybegin, yend=yend, xsize=xsize, ysize=ysize,         &
            y_is_global=logical(y_is_global))
    else
       call fms_mpp_domains_set_compute_domain(domain=current_domain, xbegin=xbegin, xend=xend,&
            tile_count=tile_count, ybegin=ybegin, yend=yend, xsize=xsize, ysize=ysize)
    end if

    if(present(xbegin)) xbegin = xbegin + xshift - 1
    if(present(xend))   xend   = xend   + xshift - 1
    if(present(ybegin)) ybegin = ybegin + yshift - 1
    if(present(yend))   yend   = yend   + yshift - 1
    if(present(tile_count)) tile_count = tile_count - 1


  end subroutine cFMS_set_compute_domain
 
  
  !> cFMS_set_current_domain sets the domain to the current_domain where the
  !! current_domain has id=domain_id
  subroutine cFMS_set_current_domain(domain_id) bind(C, name="cFMS_set_current_domain")

    implicit none
    integer, intent(in) :: domain_id
    
    current_domain => domain(domain_id)
    
  end subroutine cFMS_set_current_domain


  !> cFMS_set_current_nest_domain sets the nest_domain to the current_nest_domain
  !! where the current_nest_domain has id=nest_domain_id  
  subroutine cFMS_set_current_nest_domain(nest_domain_id)

    implicit none
    integer, intent(in) :: nest_domain_id
    
    current_nest_domain => nest_domain(nest_domain_id)
    
  end subroutine cFMS_set_current_nest_domain


  !> cFMS_set_data_domain
  subroutine cFMS_set_data_domain(domain_id, xbegin, xend, ybegin, yend, xsize, ysize, &
       x_is_global, y_is_global, tile_count, whalo, shalo) bind(C, name="cFMS_set_data_domain")
    
    implicit none
    integer, intent(in) :: domain_id
    integer, intent(inout), optional :: xbegin, xend, ybegin, yend, xsize, ysize
    logical(c_bool), intent(in),    optional :: x_is_global, y_is_global
    integer, intent(inout), optional :: tile_count
    integer, intent(in),    optional :: whalo, shalo
   
    integer :: yshift = 0, xshift = 0
    
    if(present(whalo)) xshift = whalo
    if(present(shalo)) yshift = shalo

    if(present(xbegin)) xbegin = xbegin - xshift + 1
    if(present(xend))   xend   = xend   - xshift + 1
    if(present(ybegin)) ybegin = ybegin - yshift + 1
    if(present(yend))   yend   = yend   - yshift + 1
    if(present(tile_count)) tile_count = tile_count + 1

    !simply way to avoid converting logicals from c_bool to kind=4.  The program will always send in
    ! x_is_global and y_is_global
    call cFMS_set_current_domain(domain_id)

    if(present(x_is_global)) then
       if(present(y_is_global)) then
          call fms_mpp_domains_set_data_domain(current_domain, xbegin=xbegin, xend=xend, ybegin=ybegin, yend=yend, &
               xsize=xsize, ysize=ysize, x_is_global=logical(x_is_global), y_is_global=logical(y_is_global),       &
               tile_count=tile_count)
       else
          call fms_mpp_domains_set_data_domain(current_domain, xbegin=xbegin, xend=xend, ybegin=ybegin, yend=yend, &
               xsize=xsize, ysize=ysize, x_is_global=logical(x_is_global), tile_count=tile_count)
       end if
    else if(present(y_is_global)) then
       call fms_mpp_domains_set_data_domain(current_domain, xbegin=xbegin, xend=xend, ybegin=ybegin, yend=yend, &
            xsize=xsize, ysize=ysize, y_is_global=logical(y_is_global), tile_count=tile_count)
    else
       call fms_mpp_domains_set_data_domain(current_domain, xbegin=xbegin, xend=xend, ybegin=ybegin, yend=yend, &
            xsize=xsize, ysize=ysize, tile_count=tile_count)
    end if

    if(present(xbegin)) xbegin = xbegin + xshift - 1
    if(present(xend))   xend   = xend   + xshift - 1
    if(present(ybegin)) ybegin = ybegin + yshift - 1
    if(present(yend))   yend   = yend   + yshift - 1
    if(present(tile_count)) tile_count = tile_count - 1
    
  end subroutine cFMS_set_data_domain


  !> cFMS_set_global_domain
  subroutine cFMS_set_global_domain(domain_id, xbegin, xend, ybegin, yend, xsize, ysize, tile_count, &
       whalo, shalo) bind(C, name="cFMS_set_global_domain")
    implicit none
    integer, intent(in) :: domain_id
    integer, intent(inout), optional :: xbegin, xend, ybegin, yend, xsize, ysize
    integer, intent(inout), optional :: tile_count
    integer, intent(in),    optional :: whalo, shalo
    
    integer :: xshift = 0, yshift = 0

    if(present(whalo)) xshift = whalo
    if(present(shalo)) yshift = shalo

    if(present(xbegin)) xbegin = xbegin - xshift + 1
    if(present(xend))   xend   = xend   - xshift + 1    
    if(present(ybegin)) ybegin = ybegin - yshift + 1
    if(present(yend))   yend   = yend   - yshift + 1
    if(present(tile_count)) tile_count = tile_count + 1
    
    call cFMS_set_current_domain(domain_id)
    call fms_mpp_domains_set_global_domain(current_domain, xbegin=xbegin, xend=xend, ybegin=ybegin, yend=yend, &
                                           xsize=xsize, ysize=ysize, tile_count=tile_count)

    if(present(xbegin)) xbegin = xbegin + xshift - 1
    if(present(xend))   xend   = xend   + xshift - 1    
    if(present(ybegin)) ybegin = ybegin + yshift - 1
    if(present(yend))   yend   = yend   + yshift - 1
    if(present(tile_count)) tile_count = tile_count - 1
   
  end subroutine cFMS_set_global_domain
  
  !> cFMS_update_domains
#include "c_update_domains.fh"
  
end module c_fms_mod
